--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark ">
     <div class="container-fluid">
-        <img src="/img/codoacodo.jpg" style="width: 10%;">
+        <img src="img/codoacodo.png" style="width: 10%;">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
