--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link " href="#conve">Conviertete en orador</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-success " href="#">Comprar tickets</a>
+                    <a class="nav-link text-success " href="/ticket.html">Comprar tickets</a>
                 </li>
             </ul>
         </div>
