--- a/ticket.html
+++ b/ticket.html
@@ -16,16 +16,16 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#confe">La conferencia</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html#confe">La conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="index.html#orad">Los oradores</a>
+                        <a class="nav-link " href="/index.html#orad">Los oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="index.html#lugar">El lugar y la fecha</a>
+                        <a class="nav-link " href="/index.html#lugar">El lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="index.html#conve">Conviertete en orador</a>
+                        <a class="nav-link " href="/index.html#conve">Conviertete en orador</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-success " href="#">Comprar tickets</a>
