--- a/ticket.html
+++ b/ticket.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/CodoACodo-FrontEnd/#confe">La conferencia</a>
+                        <a class="nav-link" aria-current="page" href="/CodoACodo-FrontEnd/#confe">La conferencia</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="/CodoACodo-FrontEnd/#orad">Los oradores</a>
@@ -28,7 +28,7 @@
                         <a class="nav-link " href="/CodoACodo-FrontEnd/#conve">Conviertete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success " href="#">Comprar tickets</a>
+                        <a class="nav-link text-success active" href="#">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
