--- a/ticket.html
+++ b/ticket.html
@@ -114,10 +114,10 @@
 
                     <div class="row">
                         <div class="col mb-3">
-                            <button type="button" class="btn btn-success col" onclick="borrarDatos()">Borrar</button>
+                            <button type="button" class="btn btn-success col" onclick="borrarDatos()" style="width: 100%;">Borrar</button>
                         </div> 
                         <div class="col mb-3">
-                            <button type="button" class="btn btn-success col" onclick="obtenerValor()">Resumen</button>
+                            <button type="button" class="btn btn-success col" onclick="obtenerValor()" style="width: 100%;">Resumen</button>
                         </div> 
                     </div>
                 </div>
