--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             a conocer a los miembros del evento, a otros estudiantes de Codo a Codo y los oradores de 
             primer nivel que tenemos para ti. Te esperamos!</p>
             <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-            <button type="button" class="btn btn-success">Comprar tickets</button>
+            <a href="/CodoACodo-FrontEnd/ticket.html"><button type="button" class="btn btn-success">Comprar tickets</button></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -60,7 +60,7 @@
           <h2>Conf Bs As</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ad aut asperiores consequuntur aliquid, consectetur voluptatibus libero blanditiis suscipit soluta, provident fugiat ut aliquam esse fuga error animi, quibusdam culpa laborum amet laboriosam quisquam tempore? Repellendus dolorum mollitia saepe, quia, quasi quae, eius harum atque eaque aspernatur tenetur? Nisi, eligendi?</p>
           <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-          <button type="button" class="btn btn-success">Comprar tickets</button>
+            <a href="/CodoACodo-FrontEnd/ticket.html"><button type="button" class="btn btn-success">Comprar tickets</button></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -69,7 +69,7 @@
             <h2>Conf Bs As</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ad aut asperiores consequuntur aliquid, consectetur voluptatibus libero blanditiis suscipit soluta, provident fugiat ut aliquam esse fuga error animi, quibusdam culpa laborum amet laboriosam quisquam tempore? Repellendus dolorum mollitia saepe, quia, quasi quae, eius harum atque eaque aspernatur tenetur? Nisi, eligendi?</p>
             <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-            <button type="button" class="btn btn-success">Comprar tickets</button>
+            <a href="/CodoACodo-FrontEnd/ticket.html"><button type="button" class="btn btn-success">Comprar tickets</button></a>
           </div>
       </div>
     </div>
